update parsing pdf

--- a/Testing_Q&A_open_AI_2/parsing_pdf.ipynb
+++ b/Testing_Q&A_open_AI_2/parsing_pdf.ipynb
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "# Directory path containing PDF files\n",
-    "pdf_dir = r\"C:\\Users\\Annisa Rizki\\Desktop\\Annisa Lianda\\Job Freelance\\chatbot_using_openai\\pdf\"\n",
+    "pdf_dir_path = r\"C:\\Users\\Annisa Rizki\\Desktop\\Annisa Lianda\\Job Freelance\\chatbot_using_openai\\pdf\"\n",
     "\n",
     "# Output CSV file path\n",
     "output_csv = \"output.csv\"\n",
@@ -121,10 +121,10 @@
     "paragraphs_list = []\n",
     "\n",
     "# Loop through all PDF files in the directory\n",
-    "for filename in os.listdir(pdf_dir):\n",
+    "for filename in os.listdir(pdf_dir_path):\n",
     "    if filename.endswith(\".pdf\"):\n",
     "        # Extract paragraphs from the PDF file\n",
-    "        paragraphs = extract_info(os.path.join(pdf_dir, filename))\n",
+    "        paragraphs = extract_info(os.path.join(pdf_dir_path, filename))\n",
     "        \n",
     "        # Append the paragraphs to the list with the filename\n",
     "        for paragraph in paragraphs:\n",
@@ -134,7 +134,8 @@
     "with open(output_csv, 'w', newline='', encoding='utf-8') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
     "    writer.writerow([\"Paragraph\", \"Filename\"])\n",
-    "    writer.writerows(paragraphs_list)"
+    "    writer.writerows(paragraphs_list)\n",
+    "    "
    ]
   }
  ],
