--- a/Testing_Q&A_open_AI_2/another_open_ai_berita.ipynb
+++ b/Testing_Q&A_open_AI_2/another_open_ai_berita.ipynb
@@ -1101,7 +1101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1115,7 +1115,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "24291b65878706fc6739f2d92e434eded9132f6623d2e87ce2402691d2b4c7db"
+   }
   }
  },
  "nbformat": 4,
