--- a/proprocessing/token_open_ai.ipynb
+++ b/proprocessing/token_open_ai.ipynb
@@ -1155,7 +1155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1169,7 +1169,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e2ea2127a095dc42a6926c79ee0a030828aff74e0f90a81f566bc982eef7e1b8"
+   }
   }
  },
  "nbformat": 4,
