Update code ipynb

--- a/Testing_Q&A_open_AI_2/all_step_code.ipynb
+++ b/Testing_Q&A_open_AI_2/all_step_code.ipynb
@@ -22,6 +22,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STEP 1 # Import Required Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -40,6 +48,14 @@
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "from pandas.core.common import SettingWithCopyWarning\n",
     "warnings.simplefilter(action=\"ignore\", category=SettingWithCopyWarning)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STEP 2 # Parsing or Extract PDF Into Text"
    ]
   },
   {
@@ -388,6 +404,14 @@
    ],
    "source": [
     "results"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STEP 2 # Preprocessing And Create 2 New Column (namely; Title, Heading)"
    ]
   },
   {
@@ -2322,6 +2346,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STEP 3 # Create Token Using Tiktoken For The Requirements Needed At OpenAI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -2731,26 +2763,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Embedding model parameters\n",
-    "embedding_model = \"text-embedding-ada-002\"\n",
-    "embedding_encoding = \"cl100k_base\"  # This the encoding for text-embedding-ada-002\n",
-    "max_tokens = 8000  # The maximum for text-embedding-ada-002 is 8191"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_id = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
-    "# \"Get your token in http://hf.co/settings/tokens\"\n",
-    "hf_token ='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'"
+    "## STEP 4 # Embedding Text To Get Vectorization"
    ]
   },
   {
