--- a/Testing_Q&A_open_AI_2/another_open_ai_berita.ipynb
+++ b/Testing_Q&A_open_AI_2/another_open_ai_berita.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = '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'"
+    "openai.api_key = ''"
    ]
   },
   {
