--- a/proprocessing/embeddings.ipynb
+++ b/proprocessing/embeddings.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "model_id = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
     "# \"get your token in http://hf.co/settings/tokens\"\n",
-    "hf_token ='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'"
+    "hf_token =''"
    ]
   },
   {
