--- a/proprocessing/token_open_ai.ipynb
+++ b/proprocessing/token_open_ai.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = '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'"
+    "openai.api_key = ''"
    ]
   },
   {
